# crypto-trading-mvp

./: .coverage  .env  .env.docker  .env.example  .flake8  .gitignore  CONTRIBUTING.md  LICENSE  alembic.ini  aplica_fixes_v11.py  aplica_patch_httpx_datetime.py  aplica_patch_refresh_test_tz.py  auth_routes_fixed.py  check_semana5_progress.sh  check_system_status.py  config_settings_backup.py  config_settings_enterprise.py  conftest.py  diagnose_system.py  diagnostico_completo_sistema.sh  docker-compose.production.yml  docker-compose.production.yml.backup  docker-compose.production.yml.backup.20250925_163329  docker-compose.production.yml.backup.20250925_164515  env  fix_streamlit_tests.py  fix_streamlit_tests_part2.py  generate-report.sh  gitignore  inspect_src.py  notify.sh  pyproject.toml  pytest.ini  pytest.local.ini  quality-gates.yml  relatorio_diagnostico_testes.md  requirements-dashboard.txt  requirements-dev.txt  requirements-prod.txt  requirements-test-windows.txt  (+15 more)
.github/: CODEOWNERS
alembic/: env.py
backup_app/: __init__.py  dashboard.py  main.py  main.py.backup  ppp_vishva_strategy.py
config/: settings.py
docker/: Dockerfile.api  Dockerfile.bot  Dockerfile.dashboard  README.md
docs/: API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  Plano MVP_ Serviço de Bot de Trading Automatizado para Criptomoedas.md  SECURITY.md  STRATEGY_GUIDE.md  📁 Estrutura Completa do Projeto MVP Bot de Trading.md  📁 Guia de Organização de Arquivos - MVP Bot de Trading.md  📋 Análise de Arquivos Faltantes - MVP Bot de Trading.md
project-management/: changelog.md  current_files.txt  (+5 more)
(+167 files in other folders)
